--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meus Objetivos do Ano</title>
 </head>
 <body>
 <h1>Fabíola da Silva Campos</h1> 
+<section class="conteudo-principal"></section>
+<h2 class="titulo-principal">Meus Objetivos do Ano_</h2>
+<div class="botoes">
+    <button class="botao"></button>
+    <button class="botao"></button>
+    <button class="botao"></button>
+    <button class="botao"></button>
+
+</div>
 </body>
 </html>
