--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus Objetivos do Ano</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Fabíola da Silva Campos</h1> 
 <section class="conteudo-principal"></section>
 <h2 class="titulo-principal">Meus Objetivos do Ano_</h2>
 <div class="botoes">
-    <button class="botao"></button>
-    <button class="botao"></button>
-    <button class="botao"></button>
-    <button class="botao"></button>
+    <button class="botao">Estudar cursos na Alura</button>
+    <button class="botao">Criar projetos em Javascript</button>
+    <button class="botao">Criar um portfolio</button>
+    <button class="botao">Atualizar meu curriculo</button>
 
 </div>
 </body>
