--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Fabíola da Silva Campos</h1> 
 <section class="conteudo-principal"></section>
-<h2 class="titulo-principal">Meus Objetivos do Ano_</h2>
+<h2 class="titulo-principal">Meus Objetivos do Ano <span>_</span></h2>
 <div class="botoes">
     <button class="botao">Estudar cursos na Alura</button>
     <button class="botao">Criar projetos em Javascript</button>
